<resources>
    <string name="app_name"></string>
    <string name="pref_comport">Настройки COM порта</string>
    <string name="settings_directory_path">Настройки пути сохранения логов…</string>
    <string name="settings_comport">Настройки COM порта…</string>
    <string name="saveas">Сохранить лог как…</string>
    <string name="save">Сохранить лог</string>
    <string name="exit">Выйти из программы</string>
    <string name="readfile">Открыть логфайл</string>
    <string name="button_ESCL">ESCL</string>
    <string name="button_ESCH">ESCH</string>
    <string name="button_ESCB">ESCB</string>
    <string name="button_ESCN">ESCN</string>
    <string name="button_Clear">Clear</string>
    <string name="button_deleteIP">Delete IP</string>
    <string name="button_addIP">Add IP</string>
    <string name="refreshing">Scanning</string>
    <string name="button_BT">Find BT devices</string>
    <string name="button_WIFI">Find NET devices</string>
    <string name="text_IP">Add IP address</string>
    <string name="drawer_item_ipadress">IP address settings…</string>
    <string name="drawer_item_openfile">Open file log…</string>
    <string name="drawer_item_serialportsettings">Serial Port settings</string>
    <string name="drawer_item_eaton">Eaton</string>
    <string name="drawer_item_eaton9130_pattern_header">Eaton 9130</string>
    <string name="drawer_item_eaton9130_pattern_subheader">9600 8 NONE 1 OFF</string>
    <string name="drawer_item_eaton9x90_pattern_header">Eaton 9x90</string>
    <string name="drawer_item_eaton9x90_pattern_subheader">19200 8 NONE 1 OFF</string>

    <string name="drawer_item_customsettings">Custom…</string>
    <string name="drawer_item_exit">Exit</string>

    <string name="incorrectIPAddress">IP address is incorrect</string>
</resources>
