<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SerialConsoleActivity">

    <item
        android:id="@+id/action_settings_directory_path"
        android:orderInCategory="100"
        android:title="@string/settings_directory_path"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_saveas"
        android:orderInCategory="100"
        android:title="@string/saveas"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_save"
        android:orderInCategory="100"
        android:title="@string/save"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_readfile"
        android:orderInCategory="100"
        android:title="@string/readfile"
        app:showAsAction="never"/>


</menu>