<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolbarcolor"
        android:minHeight="?attr/actionBarSize"
        android:paddingTop="@dimen/tool_bar_top_padding"
         />

    <TextView
        android:id="@+id/progressBarTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_centerHorizontal="true"
        android:text="@string/refreshing"
        android:padding="8dp"
        android:textSize="18sp"
        android:layout_marginTop="60dp" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/progressBarTitle"
        android:layout_centerHorizontal="true"
        android:padding="8dp"
        style="@android:style/Widget.Holo.ProgressBar.Horizontal"
        android:indeterminate="true" />

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_below="@+id/progressBar"
        android:layout_centerHorizontal="true"
        android:background="#eeeeee" />

    <ListView
        android:id="@+id/deviceList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/separator"
        android:layout_margin="10dp"
        android:transcriptMode="alwaysScroll"
        android:stackFromBottom="true"
        android:divider="@android:color/transparent"
        android:dividerHeight="10dp"

        />

    <Button style="?android:buttonBarButtonStyle"
        android:text="@string/button_BT"
        android:textColor="@color/button_BT_fontcolor"
        android:id="@+id/btbutton"
        android:onClick="btbutton_click"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/deviceList"
        android:layout_alignEnd="@+id/deviceList"
        android:layout_width="150dp"
        android:layout_height="60dp"

        />

    <Button style="?android:buttonBarButtonStyle"
        android:text="@string/button_WIFI"
        android:textColor="@color/button_BT_fontcolor"
        android:id="@+id/wifibutton"
        android:onClick="wifibutton_click"
        android:layout_width="150dp"
        android:layout_height="60dp"

        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/btbutton"
        android:layout_toStartOf="@+id/btbutton" />
</RelativeLayout>